--- a/KEC_functions/k_expectile_functions.ipynb
+++ b/KEC_functions/k_expectile_functions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,13 +11,14 @@
     "import numpy as np\n",
     "import time\n",
     "import copy\n",
+    "import random\n",
     "#from sklearn.decomposition import PCA\n",
     "#from sklearn.preprocessing import StandardScale"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,6 +118,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def tau_fun(group, e):\n",
+    "    res = group - e\n",
+    "    neg = np.array([res<0],dtype = np.int32)\n",
+    "    pos = np.array([res>=0],dtype= np.int32)\n",
+    "    neg_s = -(neg*res).sum(axis=1)/neg.sum(axis=1)\n",
+    "    pos_s = (pos*res).sum(axis=1)/pos.sum(axis=1)\n",
+    "    c = neg_s/pos_s\n",
+    "    tau = c/(1+c)\n",
+    "    return tau"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# K expectile clustering with pre-specified tau vector\n",
     "def k_expectile_utau(X, k, tau): \n",
     "    X = np.array(X)\n",
@@ -192,6 +210,140 @@
     "        print(error)\n",
     "    return C, clusters"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Euclidean distance\n",
+    "def dist(a, b):\n",
+    "    return np.linalg.norm(a - b, None)\n",
+    "#Tau-distance\n",
+    "def tau_dist_fun(x, centroid, tau):\n",
+    "    arr = x - centroid\n",
+    "    tau_ar = tau[None:,:]\n",
+    "    neg = np.array([arr<0],dtype=np.int32)\n",
+    "    pos = np.array([arr>=0],dtype=np.int32)\n",
+    "    w_pos = pos * tau_ar\n",
+    "    w_neg = neg * (1-tau_ar)\n",
+    "    dist = (arr ** 2 * w_pos).sum(axis = arr.ndim) + (arr ** 2 * w_neg).sum(axis = arr.ndim)\n",
+    "    return dist\n",
+    "#get centroids\n",
+    "def get_closest_centroid(x, centroid, tau):\n",
+    "    # Loop over each centroid and compute the distance from data point.\n",
+    "    dist = tau_dist_fun(x, centroid, tau)\n",
+    "    # Get the index of the centroid with the smallest distance to the data point\n",
+    "    assigned_centroids = np.argmin(dist, axis = 2)\n",
+    "    clusters = np.squeeze(assigned_centroids)\n",
+    "    return clusters\n",
+    "#Expectile estimation\n",
+    "def expectile_fun_c(group, tau):\n",
+    "    e = np.mean(group, axis=0)\n",
+    "    e_new = np.zeros(e.shape)\n",
+    "    while dist(e_new , e) != 0:\n",
+    "        res = group - e\n",
+    "        e = copy.deepcopy(e_new)\n",
+    "        neg = np.array([res<0],dtype = np.int32)\n",
+    "        pos = np.array([res>=0],dtype= np.int32)\n",
+    "        norm = pos.sum(axis=1)*tau + neg.sum(axis=1)*(1-tau)\n",
+    "        e_arr = (tau * (group * pos).sum(axis=1) + (1-tau) * (group * neg).sum(axis=1))/norm\n",
+    "        e_new = np.squeeze(e_arr)\n",
+    "    return e_new\n",
+    "#Estimate optimal taus\n",
+    "def tau_fun_c(group, e):\n",
+    "    res = group - e\n",
+    "    neg = np.array([res<0],dtype = np.int32)\n",
+    "    pos = np.array([res>=0],dtype= np.int32)\n",
+    "    neg_s = -(neg*res).sum(axis=1)/neg.sum(axis=1)\n",
+    "    pos_s = (pos*res).sum(axis=1)/pos.sum(axis=1)\n",
+    "    c = neg_s/pos_s\n",
+    "    tau = c/(1+c)\n",
+    "    return tau\n",
+    "# Define K expectile clustering \n",
+    "# Main function\n",
+    "def k_expectile_vtau_c(X, k):\n",
+    "    X = np.array(X)\n",
+    "# Initialize cluster centers as K means cluster centers\n",
+    "    kmeans = KMeans(n_clusters=k)\n",
+    "    kmeans.fit(X)\n",
+    "    C = kmeans.cluster_centers_\n",
+    "\n",
+    "# To store the value of centroids when it updates\n",
+    "    C_old = np.zeros(C.shape)\n",
+    "# Initialize tau = 0.5\n",
+    "    tau = np.ones(C.shape)*0.5\n",
+    "# Error func. - Distance between new centroids and old centroids\n",
+    "    error = dist(C, C_old)\n",
+    "# main loop   \n",
+    "    for r in range(30):\n",
+    "        # Get closest centroids to each data point\n",
+    "        assigned_clusters = get_closest_centroid(X[:, None, :], C[None,:, :], tau)\n",
+    "        # Storing the old centroid values\n",
+    "        C_old = copy.deepcopy(C)\n",
+    "        # Compute new centroids\n",
+    "        for c in range(k):\n",
+    "            # Get data points belonging to each cluster \n",
+    "            cluster_members = X[assigned_clusters == c]\n",
+    "        \n",
+    "            # Compute the centroids of the clusters\n",
+    "            C[c] = expectile_fun_c(cluster_members, tau[c])\n",
+    "        \n",
+    "            # Update the tau\n",
+    "            tau[c] = tau_fun_c(cluster_members, C[c])\n",
+    "        error = dist(C, C_old)\n",
+    "        print(tau)\n",
+    "        print(error)\n",
+    "    return C, assigned_clusters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_size = 1000\n",
+    "num_iters = 50\n",
+    "num_clusters = 4\n",
+    "\n",
+    "\n",
+    "# sample from Gaussians \n",
+    "data1 = np.random.normal((5,5,5), (4, 4, 4), (data_size,3))\n",
+    "data2 = np.random.normal((4,20,20), (3,3,3), (data_size, 3))\n",
+    "data3 = np.random.normal((25, 20, 5), (5, 5, 5), (data_size,3))\n",
+    "data4 = np.random.normal((30, 30, 30), (5, 5, 5), (data_size,3))\n",
+    "\n",
+    "# Combine the data to create the final dataset\n",
+    "data = np.concatenate((data1,data2, data3, data4), axis = 0)\n",
+    "\n",
+    "np.random.shuffle(data)\n",
+    "\n",
+    "# Set random seed for reproducibility \n",
+    "random.seed(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.49748238 0.49748238 0.50654582]\n",
+      " [0.49598394 0.50803213 0.51104418]\n",
+      " [0.475      0.518      0.515     ]\n",
+      " [0.48664688 0.49950544 0.50346192]]\n",
+      "3.9859325923993215e-14\n"
+     ]
+    }
+   ],
+   "source": [
+    "C_e, clusters_e = k_expectile_vtau_c(data, 4)"
+   ]
   }
  ],
  "metadata": {
@@ -210,9 +362,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
